[package]
name = "bptree"
version = "0.1.0"
authors = ["Ryo Konishi <todoroki.auone@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
rand = "0.6"
clap = "2.32"

[profile.release]
opt-level = 'z'    # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
debug = false      # (u32 or bool) Include debug information (debug symbols).
                   # Equivalent to `-C debuginfo=2` compiler flag.
rpath = false      # controls whether compiler should set loader paths.
                   # If true, passes `-C rpath` flag to the compiler.
lto = true         # Link Time Optimization usually reduces size of binaries
                   # and static libraries. Increases compilation time.
                   # If true, passes `-C lto` flag to the compiler, and if a
                   # string is specified like 'thin' then `-C lto=thin` will
                   # be passed.
debug-assertions = true
                   # controls whether debug assertions are enabled
                   # (e.g. debug_assert!() and arithmetic overflow checks)
codegen-units = 16 # if > 1 enables parallel code generation which improves
                   # compile times, but prevents some optimizations.
                   # Passes `-C codegen-units`.
panic = 'abort'    # panic strategy (`-C panic=...`), can also be 'abort'
incremental = false# whether or not incremental compilation is enabled. Cannot be on if LTO enabled.
overflow-checks = true
                   # use overflow checks for integer arithmetic.
                   # Passes the `-C overflow-checks=...` flag to the compiler.

